--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>WebRTC Video Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        /* CSSは変更なし（startButtonのスタイルが新しいボタンに適用されます） */
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background-color: #202124; color: #ffffff; margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; height: 100vh; }
         #video-container { position: relative; width: 100%; height: 100%; overflow: hidden; background-color: #000; }
         #remoteVideo { width: 100%; height: 100%; object-fit: cover; }
@@ -16,36 +15,29 @@
         .control-button:disabled { background-color: #282a2d; cursor: not-allowed; }
         #callButton { background-color: #33a853; }
         #callButton.hangup { background-color: #ea4335; }
-        /* 新しいボタンと初期画面用のスタイル */
         #initial-view { text-align: center; }
         #initial-view h1 { font-weight: 300; }
-        #createRoomButton {
-            padding: 15px 30px; font-size: 18px; border-radius: 8px; border: none;
-            background-color: #8ab4f8; color: #202124; cursor: pointer; z-index: 10;
-        }
+        #createRoomButton { padding: 15px 30px; font-size: 18px; border-radius: 8px; border: none; background-color: #8ab4f8; color: #202124; cursor: pointer; z-index: 10; }
     </style>
 </head>
 <body>
     <div id="video-container">
-        <!-- ▼▼▼ 初期画面のUIを変更 ▼▼▼ -->
         <div id="initial-view">
             <h1>WebRTC Video Chat</h1>
             <button id="createRoomButton">新しいビデオ通話を開始する</button>
         </div>
-
         <video id="remoteVideo" autoplay playsinline style="display: none;"></video>
         <video id="localVideo" autoplay muted playsinline></video>
-
         <div id="controls" style="display: none;">
-            <button class="control-button" id="micButton">🎤</button>
+            <button class="control-button" id="micButton" disabled>🎤</button>
             <button class="control-button" id="callButton" disabled>📞</button> 
-            <button class="control-button" id="videoButton">📹</button>
+            <button class="control-button" id="videoButton" disabled>📹</button>
         </div>
     </div>
     
-    <!-- ▼▼▼ uuidライブラリをブラウザで使えるように読み込む ▼▼▼ -->
-    <script src="/node_modules/uuid/dist/umd/uuid.min.js"></script>
-
+    <!-- ▼▼▼ uuidライブラリの読み込み元をCDNに変更 ▼▼▼ -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"></script>
+    
     <script src="main.js"></script>
 </body>
 </html>
