--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
         <video id="remoteVideo" autoplay playsinline style="display: none;"></video>
         <video id="localVideo" autoplay muted playsinline></video>
         <div id="controls" style="display: none;">
+            <!-- ▼▼▼ 全てのボタンの初期状態をdisabledに統一 ▼▼▼ -->
             <button class="control-button" id="micButton" disabled>🎤</button>
             <button class="control-button" id="callButton" disabled>📞</button> 
             <button class="control-button" id="videoButton" disabled>📹</button>
         </div>
     </div>
     
-    <!-- ▼▼▼ uuidライブラリの読み込み元をCDNに変更 ▼▼▼ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"></script>
-    
     <script src="main.js"></script>
 </body>
 </html>
