Change object-fit to contain for remote video

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     #remoteVideo {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
     }
 
     /* 自分のビデオ (ワイプ) */
