--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
         
         <div id="participant-info" style="display: none;">参加人数: 1人</div>
 
-        <!-- ▼▼▼ 変更: remoteVideoに "muted" 属性を追加 ▼▼▼ -->
-        <video id="remoteVideo" autoplay muted playsinline style="display: none;"></video>
+        <!-- ▼▼▼ 変更点: remoteVideoから "muted" 属性を削除 ▼▼▼ -->
+        <video id="remoteVideo" autoplay playsinline style="display: none;"></video>
         <video id="localVideo" autoplay muted playsinline></video>
         
         <div id="controls" style="display: none;">
