--- a/index.html
+++ b/index.html
@@ -18,22 +18,101 @@
         height: 100vh;
         overflow: hidden;
     }
-    #video-container { position: relative; width: 100vw; height: 100vh; overflow: hidden; background-color: #000; }
-    #participant-info { position: absolute; top: 20px; left: 20px; background-color: rgba(0, 0, 0, 0.5); padding: 8px 15px; border-radius: 8px; font-size: 16px; z-index: 10; }
-    #remoteVideo { width: 100%; height: 100%; object-fit: contain; }
-    #localVideo { position: absolute; bottom: 20px; right: 20px; width: 25vw; max-width: 200px; min-width: 100px; height: auto; border: 2px solid #fff; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.5); }
-    #controls { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); background-color: rgba(0, 0, 0, 0.5); padding: 10px 15px; border-radius: 50px; display: flex; gap: 10px; }
-    .control-button { background-color: #3c4043; color: white; border: none; width: 80px; height: 60px; border-radius: 20px; cursor: pointer; display: flex; flex-direction: column; justify-content: center; align-items: center; transition: background-color 0.2s; padding: 5px 0; }
+
+    /* ビデオ全体のコンテナ */
+    #video-container {
+        position: relative;
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden;
+        background-color: #000;
+    }
+    
+    #participant-info {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 8px 15px;
+        border-radius: 8px;
+        font-size: 16px;
+        z-index: 10;
+    }
+
+    #remoteVideo {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+    #localVideo {
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        width: 25vw;
+        max-width: 200px;
+        min-width: 100px;
+        height: auto;
+        border: 2px solid #fff;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.5);
+    }
+
+    #controls {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 10px 15px;
+        border-radius: 50px;
+        display: flex;
+        gap: 10px;
+    }
+
+    .control-button {
+        background-color: #3c4043;
+        color: white;
+        border: none;
+        width: 80px;
+        height: 60px;
+        border-radius: 20px;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transition: background-color 0.2s;
+        padding: 5px 0;
+    }
     .control-button:hover { background-color: #5f6368; }
     .control-button:disabled { background-color: #282a2d; cursor: not-allowed; opacity: 0.5; }
-    .icon { font-size: 24px; height: 28px; }
-    .label { font-size: 10px; margin-top: 2px; }
+
+    .icon {
+        font-size: 24px;
+        height: 28px;
+    }
+    .label {
+        font-size: 10px;
+        margin-top: 2px;
+    }
+
     #callButton { background-color: #33a853; }
     #callButton.hangup { background-color: #ea4335; }
     #recordButton.recording { background-color: #ea4335; }
+
     #initial-view { text-align: center; }
     #initial-view h1 { font-weight: 300; }
-    #createRoomButton { padding: 15px 30px; font-size: 18px; border-radius: 8px; border: none; background-color: #8ab4f8; color: #202124; cursor: pointer; z-index: 10; }
+    #createRoomButton {
+        padding: 15px 30px;
+        font-size: 18px;
+        border-radius: 8px;
+        border: none;
+        background-color: #8ab4f8;
+        color: #202124;
+        cursor: pointer;
+        z-index: 10;
+    }
 
     /* 設定パネルのスタイル */
     #settingsPanel {
@@ -66,11 +145,54 @@
         padding: 5px;
         font-size: 14px;
     }
+
+    /* ローディング表示のスタイル */
+    #loading-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        display: none; /* 初期状態では非表示 */
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 100;
+    }
+    .spinner {
+        border: 4px solid #f3f3f3;
+        border-top: 4px solid #8ab4f8;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        animation: spin 1s linear infinite;
+    }
+    #loading-text {
+        color: white;
+        margin-top: 20px;
+        font-size: 18px;
+    }
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
     
     @media (max-width: 768px) {
-        #localVideo { width: 30vw; bottom: 15px; right: 15px; }
-        #controls { padding: 8px 10px; gap: 8px; bottom: 15px; }
-        .control-button { width: 70px; height: 55px; }
+        #localVideo {
+            width: 30vw;
+            bottom: 15px;
+            right: 15px;
+        }
+        #controls {
+            padding: 8px 10px;
+            gap: 8px;
+            bottom: 15px;
+        }
+        .control-button {
+            width: 70px;
+            height: 55px;
+        }
         .icon { font-size: 20px; }
         .label { font-size: 9px; }
         #settingsPanel { bottom: 85px; }
@@ -78,9 +200,16 @@
     </style>
 </head>
 <body>
+    <!-- 録画合成用の、画面には表示されないCanvas要素 -->
     <canvas id="recordingCanvas" style="display: none;"></canvas>
 
     <div id="video-container">
+        <!-- ローディング表示のUI -->
+        <div id="loading-overlay">
+            <div class="spinner"></div>
+            <p id="loading-text">サーバーに接続しています...</p>
+        </div>
+
         <div id="initial-view">
             <h1>WebRTC Video Chat</h1>
             <button id="createRoomButton">新しいビデオ通話を開始する</button>
