--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WebRTC Video Chat</title>
+    <title>WebRTC Video Chat Pro</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
     body {
@@ -35,13 +35,30 @@
         gap: 10px;
     }
 
+    /* 接続状態表示パネル */
+    #status-panel {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        z-index: 10;
+        display: none;
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 5px;
+    }
+
     .info-badge {
         background-color: rgba(0, 0, 0, 0.6);
         padding: 8px 15px;
         border-radius: 8px;
-        font-size: 14px;
+        font-size: 13px;
         backdrop-filter: blur(4px);
+        border: 1px solid rgba(255,255,255,0.1);
     }
+
+    .status-good { color: #33a853; }
+    .status-fair { color: #fbbc04; }
+    .status-poor { color: #ea4335; }
 
     #copyLinkButton {
         background-color: #8ab4f8;
@@ -54,7 +71,6 @@
         margin-top: 5px;
     }
 
-    /* 相手のビデオ：ズームを滑らかにする設定 */
     #remoteVideo {
         width: 100%;
         height: 100%;
@@ -114,11 +130,7 @@
     #callButton.hangup { background-color: #ea4335; }
     #recordButton.recording { background-color: #ea4335; animation: pulse 1.5s infinite; }
 
-    @keyframes pulse {
-        0% { opacity: 1; }
-        50% { opacity: 0.7; }
-        100% { opacity: 1; }
-    }
+    @keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.7; } 100% { opacity: 1; } }
 
     #initial-view { text-align: center; }
     #initial-view h1 { font-weight: 300; }
@@ -170,6 +182,7 @@
         .control-button { width: 60px; height: 55px; }
         .label { font-size: 8px; }
         #localVideo { width: 30vw; }
+        #status-panel { top: auto; bottom: 85px; right: 10px; font-size: 11px; }
     }
     </style>
 </head>
@@ -190,8 +203,18 @@
         <div id="room-info" style="display: none;">
             <div class="info-badge" id="participant-info">参加人数: 1人</div>
             <div class="info-badge">
-                ルームを共有:<br>
                 <button id="copyLinkButton">招待リンクをコピー</button>
+            </div>
+        </div>
+
+        <!-- 通信状態の見える化パネル -->
+        <div id="status-panel">
+            <div class="info-badge">
+                <span id="signal-icon">📶</span> 状態: <span id="connection-quality">確認中</span>
+            </div>
+            <div class="info-badge" style="font-family: monospace; font-size: 11px;">
+                下り: <span id="bitrate-val">0</span> kbps<br>
+                遅延: <span id="latency-val">0</span> ms
             </div>
         </div>
 
@@ -228,7 +251,6 @@
                 <div class="icon">📹</div>
                 <div class="label">ビデオ</div>
             </button>
-            <!-- ズームボタン -->
             <button class="control-button" id="zoomButton" disabled>
                 <div class="icon">🔍</div>
                 <div class="label">ズーム</div>
